<resources>
    <string name="app_name">Doctor-app-poc</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome %s !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <!--end-points-->
    <string name="backend_base">http://10.0.2.2:9091/api/doc-app</string>
    <!--    <string name="backend_base">http://192.168.0.104:9091/api/doc-app</string>-->
    <string name="dms_base">http://10.0.2.2:9092</string>
    <!--    <string name="dms_base">http://192.168.0.104:9092</string>-->
    <string name="pic_get">/file/data</string>
    <string name="login_endpoint">auth/login</string>
    <string name="doctor_details_endpoint">doctor/details</string>
    <string name="booking_endpoint">bookings</string>
    <string name="book_appointment_endpoint">appointment</string>
    <string name="bookings_document_with_doc_filter_endpoint">%d?for-doctor=%d</string>
    <string name="bookings_document_endpoint">documents</string>

    <!--    Document-upload-->
    <string name="document_type_lbl">Document Type</string>
    <string-array name="document_types">
        <item>Prescription</item>
        <item>Report</item>
    </string-array>
    <string name="btn_upload">Upload Document</string>
    <string name="btn_proceed">Proceed without document</string>
    <!--    strings used for card View-->
    <string name="lbl_doc_nm">Name : </string>
    <string name="lbl_doc_location">Location : </string>
    <string name="lbl_doc_exp">Years Of Exp : </string>
    <string name="lbl_doc_spec">Specialization : </string>
    <string name="btn_book_appointment">Book a Slot / Upload Reports</string>
    <!-- Strings used for fragments for navigation -->
    <string name="doctors_list_label">Select a Doctor</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Strings related to slots section-->
    <string name="slots_page_desc">Book a slot with the doctor</string>
    <!-- Strings related to prescription section-->
    <string name="prescription_page_desc">Documents Uploaded by you for the doctor</string>
    <string name="prescription_page_desc_prescription">Prescriptions</string>

    <string name="first_page_desc">Hello you are in the first page %s</string>
    <string name="second_page_desc">Hello you are in the second page %s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_appointments">All Appointments</string>
    <string name="menu_documents">Documents</string>
    <string name="menu_logout">Logout</string>


    <string name="drawer_open">OPEN</string>
    <string name="drawer_close">CLOSE</string>
    <string name="is_doc_lbl">Login As Doctor</string>


    <!--    Doctor Section-->

    <string name="menu_doc_appointments">Appointments</string>
    <string name="menu_doc_requests">Requests</string>

    <string name="title_activity_doctor_main">DoctorMainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>


    <string name="title_activity_doctor_side_main">DoctorSideMain</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>