<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.docapp.frnt.FirstFragment"
        android:label="@string/doctors_list_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />

    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.docapp.frnt.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />

    </fragment>
    <fragment
        android:id="@+id/nav_home"
        android:name="com.docapp.frnt.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.docapp.frnt.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery">
        <action
            android:id="@+id/action_nav_gallery_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_appointments"
        android:name="com.docapp.frnt.ui.doctorTabs.AppointmentsFragment"
        android:label="@string/menu_appointments"
        tools:layout="@layout/appointments_layout">
        <action
            android:id="@+id/action_nav_slideshow_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/prescriptionFragment"
        android:name="com.docapp.frnt.ui.doctorTabs.PrescriptionFragment"
        android:label="@string/menu_documents"
        tools:layout="@layout/fragment_prescription">
        <action
            android:id="@+id/action_prescriptionFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>